--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -76,7 +76,7 @@
 
             <fragment
                 android:id="@+id/fragment_taskdetail_alarm"
-                android:name="com.escodro.alkaa.ui.task.detail.category.TaskCategoryFragment"
+                android:name="com.escodro.alkaa.ui.task.detail.alarm.TaskAlarmFragment"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
                 android:layout_marginTop="24dp"
