--- a/app/src/main/res/menu/category_menu.xml
+++ b/app/src/main/res/menu/category_menu.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@id/key_action_edit_category"
+        android:title="@string/category_list_menu_edit" />
+
+    <item
         android:id="@id/key_action_remove_category"
         android:title="@string/category_list_menu_remove" />
 
