--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -4,4 +4,5 @@
     <item name="key_action_open_preference" type="id" />
     <item name="key_action_open_category" type="id" />
     <item name="key_action_remove_category" type="id" />
+    <item name="key_action_edit_category" type="id" />
 </resources>
