:sparkles: Update Navigation graph to receive Category information
Update the Navigation Graph with Safe Args to pass the Category
information from the List to the Details to be edited

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -73,7 +73,13 @@
         android:id="@+id/newCategoryFragment"
         android:name="com.escodro.alkaa.ui.category.create.NewCategoryFragment"
         android:label="@string/category_detail_title"
-        tools:layout="@layout/fragment_category_new" />
+        tools:layout="@layout/fragment_category_new">
+
+        <argument
+            android:name="categoryId"
+            app:argType="long" />
+
+    </fragment>
 
     <fragment
         android:id="@+id/aboutFragment"
