:lipstick: Update strings
Strings updated to be more generic

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -72,7 +72,7 @@
     <fragment
         android:id="@+id/newCategoryFragment"
         android:name="com.escodro.alkaa.ui.category.detail.CategoryDetailFragment"
-        android:label="@string/category_detail_title"
+        android:label=""
         tools:layout="@layout/fragment_category_new">
 
         <argument
