:recycle: Refactor Navigation Graph empty label
Update label structure to set empty String instead of using the
SharedViewModel to reduce complexity

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -45,6 +45,7 @@
     <fragment
         android:id="@+id/taskDetailFragment"
         android:name="com.escodro.alkaa.ui.task.detail.main.TaskDetailFragment"
+        android:label=""
         tools:layout="@layout/fragment_task_detail">
 
         <argument
