--- a/app/src/main/res/layout/fragment_task_detail_category.xml
+++ b/app/src/main/res/layout/fragment_task_detail_category.xml
@@ -9,10 +9,10 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
         android:src="@drawable/ic_category"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edittext_taskdetail_title" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <HorizontalScrollView
         android:id="@+id/scrollview_taskdetail_category"
