--- a/category/src/main/res/navigation/nav_graph_category.xml
+++ b/category/src/main/res/navigation/nav_graph_category.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/categoryFragment"
-        android:name="com.escodro.category.list.CategoryListFragment"
+        android:name="com.escodro.category.presentation.list.CategoryListFragment"
         android:label="@string/category_list_label"
         tools:layout="@layout/fragment_category_list">
 
