--- a/category/src/main/res/navigation/nav_graph_category.xml
+++ b/category/src/main/res/navigation/nav_graph_category.xml
@@ -11,9 +11,9 @@
         android:label="@string/category_list_label"
         tools:layout="@layout/fragment_category_list">
 
-        <!--<action-->
-        <!--android:id="@+id/action_new_category"-->
-        <!--app:destination="@id/newCategoryFragment"/>-->
+        <action
+            android:id="@+id/action_new_category"
+            app:destination="@id/newCategoryFragment" />
         <!--app:enterAnim="@anim/nav_default_enter_anim"-->
         <!--app:exitAnim="@anim/nav_default_exit_anim"-->
         <!--app:popEnterAnim="@anim/nav_default_pop_enter_anim"-->
@@ -21,16 +21,16 @@
 
     </fragment>
 
-    <!--<fragment-->
-    <!--android:id="@+id/newCategoryFragment"-->
-    <!--android:name="com.escodro.alkaa.ui.category.detail.CategoryDetailFragment"-->
-    <!--android:label=""-->
-    <!--tools:layout="@layout/fragment_category_new">-->
+    <fragment
+        android:id="@+id/newCategoryFragment"
+        android:name="com.escodro.category.presentation.detail.CategoryDetailFragment"
+        android:label=""
+        tools:layout="@layout/fragment_category_detail">
 
-    <!--<argument-->
-    <!--android:name="categoryId"-->
-    <!--app:argType="long" />-->
+        <argument
+            android:name="categoryId"
+            app:argType="long" />
 
-    <!--</fragment>-->
+    </fragment>
 
 </navigation>
