--- a/navigation/src/main/res/navigation/nav_graph_category.xml
+++ b/navigation/src/main/res/navigation/nav_graph_category.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph_category"
-    app:startDestination="@id/categoryFragment"
-    tools:ignore="UnusedNavigation">
+    app:startDestination="@id/categoryFragment">
 
     <fragment
         android:id="@+id/categoryFragment"
