--- a/navigation/src/main/res/navigation/nav_graph.xml
+++ b/navigation/src/main/res/navigation/nav_graph.xml
@@ -6,6 +6,9 @@
 
     <include app:graph="@navigation/nav_graph_category" />
 
+    <include app:graph="@navigation/nav_graph_preference" />
+
+
     <fragment
         android:id="@+id/taskListFragment"
         android:name="com.escodro.task.presentation.list.TaskListFragment"
@@ -13,7 +16,7 @@
 
         <action
             android:id="@id/key_action_open_preference"
-            app:destination="@id/preferenceFragment"
+            app:destination="@id/nav_graph_preference"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
@@ -30,21 +33,6 @@
     </fragment>
 
     <fragment
-        android:id="@+id/preferenceFragment"
-        android:name="com.escodro.alkaa.ui.preference.PreferenceFragment"
-        android:label="@string/preference_title">
-
-        <action
-            android:id="@+id/key_action_open_about"
-            app:destination="@id/aboutFragment"
-            app:enterAnim="@anim/slide_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/slide_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
-
-    </fragment>
-
-    <fragment
         android:id="@+id/taskDetailFragment"
         android:name="com.escodro.task.presentation.detail.main.TaskDetailFragment"
         android:label=""
@@ -55,11 +43,4 @@
             app:argType="long" />
 
     </fragment>
-
-    <fragment
-        android:id="@+id/aboutFragment"
-        android:name="com.escodro.alkaa.ui.about.AboutFragment"
-        android:label="@string/about_detail_title"
-        tools:layout="@layout/fragment_about" />
-
 </navigation>
