:sparkles: Add base code in Tracker module
Base graph and base code added

--- a/libraries/navigation/src/main/res/navigation/nav_graph.xml
+++ b/libraries/navigation/src/main/res/navigation/nav_graph.xml
@@ -8,6 +8,7 @@
 
     <include app:graph="@navigation/nav_graph_preference" />
 
+    <include app:graph="@navigation/nav_graph_tracker" />
 
     <fragment
         android:id="@+id/taskListFragment"
