--- a/libraries/navigation/src/main/res/navigation/nav_graph_tracker.xml
+++ b/libraries/navigation/src/main/res/navigation/nav_graph_tracker.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/trackerFragment"
-        android:name="com.escodro.tracker.TrackerFragment">
+        android:name="com.escodro.tracker.presentation.TrackerFragment">
 
         <deepLink app:uri="alkaa.escodro.com/tracker" />
 
