:bug: Update Navigation crash
[root-cause] After Google update on Jetpack Navigation, it is not
possible to pass null value via Safe Args. That's on you, Google. :(

[solution] Set the default value as "0L" and handle it as adding a new
category

--- a/libraries/navigation/src/main/res/navigation/nav_graph_category.xml
+++ b/libraries/navigation/src/main/res/navigation/nav_graph_category.xml
@@ -29,7 +29,8 @@
 
         <argument
             android:name="categoryId"
-            app:argType="long" />
+            app:argType="long"
+            android:defaultValue="0L"/>
 
     </fragment>
 
