--- a/features/tracker/src/main/res/layout/fragment_tracker.xml
+++ b/features/tracker/src/main/res/layout/fragment_tracker.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/piechart_tracker"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="WOW"
-        android:textSize="72sp"
-        tools:ignore="HardcodedText" />
+        android:layout_margin="48dp" />
 
 </LinearLayout>
