:speech_balloon: Add "Task Tracker" title on screen
String updated and title set on the feature screen

--- a/libraries/navigation/src/main/res/navigation/nav_graph_tracker.xml
+++ b/libraries/navigation/src/main/res/navigation/nav_graph_tracker.xml
@@ -6,7 +6,8 @@
 
     <fragment
         android:id="@+id/trackerFragment"
-        android:name="com.escodro.tracker.presentation.TrackerFragment">
+        android:name="com.escodro.tracker.presentation.TrackerFragment"
+        android:label="@string/tracker_title">
 
         <deepLink app:uri="alkaa.escodro.com/tracker" />
 
