--- a/features/category/src/main/res/layout/item_category.xml
+++ b/features/category/src/main/res/layout/item_category.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="category"
-            type="com.escodro.domain.viewdata.ViewData.Category" />
+            type="com.escodro.category.model.Category" />
 
     </data>
 
