:building_construction: Update Task module to use new Use Cases
Task module update to use the new Use Cases that depends on Repository
instead of Local directly

--- a/features/task/src/main/res/layout/item_task.xml
+++ b/features/task/src/main/res/layout/item_task.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="task"
-            type="com.escodro.domain.viewdata.ViewData.Task" />
+            type="com.escodro.task.model.Task" />
 
         <variable
             name="color"
