--- a/features/task/src/main/res/layout/fragment_task_list.xml
+++ b/features/task/src/main/res/layout/fragment_task_list.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
+    <com.airbnb.epoxy.EpoxyRecyclerView
         android:id="@+id/recyclerview_tasklist_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
