:lipstick: Add support for Dark Theme
Layout, resources and some general code updated to support Dark Theme

--- a/features/category/src/main/res/layout/fragment_category_detail.xml
+++ b/features/category/src/main/res/layout/fragment_category_detail.xml
@@ -99,7 +99,7 @@
 
         </RadioGroup>
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button_categorynew_add"
             android:layout_width="match_parent"
             android:layout_height="48dp"
