--- a/features/category/src/main/res/layout/fragment_category_list.xml
+++ b/features/category/src/main/res/layout/fragment_category_list.xml
@@ -36,8 +36,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:backgroundTint="@color/colorAccent"
         android:src="@drawable/ic_add_category"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tint="@android:color/white" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
