--- a/features/task/src/main/res/layout/item_task.xml
+++ b/features/task/src/main/res/layout/item_task.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="color"
-            type="String" />
+            type="Integer" />
 
         <variable
             name="isAlarmVisible"
