--- a/features/task/src/main/res/layout/fragment_task_detail_alarm.xml
+++ b/features/task/src/main/res/layout/fragment_task_detail_alarm.xml
@@ -19,23 +19,23 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginStart="16dp"
-            android:layout_marginBottom="32dp"
             android:background="@null"
             android:src="@drawable/ic_alarm"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip_taskdetail_date"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="16dp"
             android:text="@{viewModel.taskData.dueDate}"
             android:visibility="@{safeUnbox(viewModel.chipVisibility)}"
             app:closeIconVisible="true"
-            app:layout_constraintBottom_toBottomOf="@id/btn_taskdetail_date"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/btn_taskdetail_date"
-            app:layout_constraintTop_toTopOf="@id/btn_taskdetail_date" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textview_taskdetail_date"
