--- a/features/task/src/main/res/layout/fragment_task_detail_alarm.xml
+++ b/features/task/src/main/res/layout/fragment_task_detail_alarm.xml
@@ -18,7 +18,7 @@
             android:id="@+id/btn_taskdetail_date"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
             android:background="@null"
             android:src="@drawable/ic_alarm"
             app:layout_constraintBottom_toTopOf="@+id/img_taskdetail_repeating"
@@ -52,12 +52,14 @@
             app:layout_constraintStart_toEndOf="@id/btn_taskdetail_date"
             app:layout_constraintTop_toTopOf="@id/btn_taskdetail_date" />
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/img_taskdetail_repeating"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
+            android:background="@null"
             android:src="@drawable/ic_repeat"
+            android:visibility="@{safeUnbox(viewModel.chipVisibility)}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_taskdetail_date" />
@@ -70,6 +72,7 @@
             android:layout_marginEnd="16dp"
             android:textColor="@color/gray_light"
             android:textSize="18sp"
+            android:visibility="@{safeUnbox(viewModel.chipVisibility)}"
             app:layout_constraintBottom_toBottomOf="@id/img_taskdetail_repeating"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/img_taskdetail_repeating"
