--- a/features/task/src/main/res/layout/item_task.xml
+++ b/features/task/src/main/res/layout/item_task.xml
@@ -17,6 +17,10 @@
             name="isAlarmVisible"
             type="Boolean" />
 
+        <variable
+            name="isRepeatingVisible"
+            type="Boolean" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -73,7 +77,7 @@
             android:text="@{task.title}"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/textview_itemtask_alarm"
-            app:layout_constraintEnd_toEndOf="@id/cardview_itemtask_background"
+            app:layout_constraintEnd_toStartOf="@id/imageview_itemtask_repeating"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@id/checkbox_itemtask_completed"
             app:layout_constraintTop_toTopOf="parent"
@@ -91,12 +95,24 @@
             android:textSize="14sp"
             android:visibility="@{isAlarmVisible}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/cardview_itemtask_background"
+            app:layout_constraintEnd_toStartOf="@id/imageview_itemtask_repeating"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@id/checkbox_itemtask_completed"
             app:layout_constraintTop_toBottomOf="@+id/textview_itemtask_description"
             app:relative_time="@{task.dueDate}"
             tools:text="11/26/18 12:00 PM" />
+
+        <ImageView
+            android:id="@+id/imageview_itemtask_repeating"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginEnd="16dp"
+            android:elevation="4dp"
+            android:src="@drawable/ic_repeat"
+            android:visibility="@{isRepeatingVisible}"
+            app:layout_constraintBottom_toBottomOf="@id/cardview_itemtask_background"
+            app:layout_constraintEnd_toEndOf="@id/cardview_itemtask_background"
+            app:layout_constraintTop_toTopOf="@id/cardview_itemtask_background" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
