--- a/features/task/src/main/res/layout/fragment_task_detail_alarm.xml
+++ b/features/task/src/main/res/layout/fragment_task_detail_alarm.xml
@@ -1,83 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <data>
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/btn_taskdetail_date"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:background="@null"
+        android:src="@drawable/ic_alarm"
+        app:layout_constraintBottom_toTopOf="@+id/btn_taskdetail_repeating"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <variable
-            name="viewModel"
-            type="com.escodro.task.presentation.detail.alarm.TaskAlarmViewModel" />
+    <com.google.android.material.chip.Chip
+        android:id="@+id/chip_taskdetail_date"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        app:closeIconVisible="true"
+        app:layout_constraintBottom_toBottomOf="@id/btn_taskdetail_date"
+        app:layout_constraintStart_toEndOf="@id/btn_taskdetail_date"
+        app:layout_constraintTop_toTopOf="@id/btn_taskdetail_date" />
 
-    </data>
+    <TextView
+        android:id="@+id/textview_taskdetail_date"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/task_details_alarm_hint"
+        android:textColor="@color/gray_light"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@id/btn_taskdetail_date"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btn_taskdetail_date"
+        app:layout_constraintTop_toTopOf="@id/btn_taskdetail_date" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/btn_taskdetail_repeating"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:background="@null"
+        android:src="@drawable/ic_repeat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_taskdetail_date" />
 
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/btn_taskdetail_date"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="8dp"
-            android:background="@null"
-            android:src="@drawable/ic_alarm"
-            app:layout_constraintBottom_toTopOf="@+id/btn_taskdetail_repeating"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/textview_taskdetail_repeating"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:textColor="@color/gray_light"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@id/btn_taskdetail_repeating"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btn_taskdetail_repeating"
+        app:layout_constraintTop_toTopOf="@id/btn_taskdetail_repeating" />
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chip_taskdetail_date"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginStart="16dp"
-            android:text="@{viewModel.taskData.dueDate}"
-            android:visibility="@{safeUnbox(viewModel.chipVisibility)}"
-            app:closeIconVisible="true"
-            app:layout_constraintBottom_toBottomOf="@id/btn_taskdetail_date"
-            app:layout_constraintStart_toEndOf="@id/btn_taskdetail_date"
-            app:layout_constraintTop_toTopOf="@id/btn_taskdetail_date" />
-
-        <TextView
-            android:id="@+id/textview_taskdetail_date"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:text="@string/task_details_alarm_hint"
-            android:textColor="@color/gray_light"
-            android:textSize="18sp"
-            android:visibility="@{!safeUnbox(viewModel.chipVisibility)}"
-            app:layout_constraintBottom_toBottomOf="@id/btn_taskdetail_date"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/btn_taskdetail_date"
-            app:layout_constraintTop_toTopOf="@id/btn_taskdetail_date" />
-
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/btn_taskdetail_repeating"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="8dp"
-            android:background="@null"
-            android:src="@drawable/ic_repeat"
-            android:visibility="@{safeUnbox(viewModel.chipVisibility)}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_taskdetail_date" />
-
-        <TextView
-            android:id="@+id/textview_taskdetail_repeating"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:textColor="@color/gray_light"
-            android:textSize="18sp"
-            android:visibility="@{safeUnbox(viewModel.chipVisibility)}"
-            app:layout_constraintBottom_toBottomOf="@id/btn_taskdetail_repeating"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/btn_taskdetail_repeating"
-            app:layout_constraintTop_toTopOf="@id/btn_taskdetail_repeating" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</layout>
+</androidx.constraintlayout.widget.ConstraintLayout>
