--- a/features/glance/src/main/res/layout/widget_loading.xml
+++ b/features/glance/src/main/res/layout/widget_loading.xml
@@ -1,6 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/background_light">
 
     <TextView
         android:layout_width="wrap_content"
