--- a/features/glance/src/main/res/layout/widget_task_list_preview.xml
+++ b/features/glance/src/main/res/layout/widget_task_list_preview.xml
@@ -1,5 +1,52 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="200dp"
+    android:layout_height="200dp"
+    android:background="@android:color/background_light"
     android:orientation="vertical"
-    android:padding="8dp" />
+    android:padding="8dp">
+
+    <ImageView
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/ic_alkaa_icon" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:gravity="center_vertical"
+        android:text="@string/glance_list_preview_item_1"
+        android:textColor="#FF444444"
+        android:textSize="12sp" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:src="#FF444444" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:gravity="center_vertical"
+        android:text="@string/glance_list_preview_item_2"
+        android:textColor="#FF444444"
+        android:textSize="12sp" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:src="#FF444444" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:gravity="center_vertical"
+        android:text="@string/glance_list_preview_item_3"
+        android:textColor="#FF444444"
+        android:textSize="12sp" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:src="#FF444444" />
+
+</LinearLayout>
