--- a/features/glance/src/main/res/xml/task_list_widget_info.xml
+++ b/features/glance/src/main/res/xml/task_list_widget_info.xml
@@ -1,11 +1,10 @@
-<!--TODO Update the resources after creating the widget-->
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:description="@string/glance_list_description"
     android:initialLayout="@layout/widget_loading"
     android:minWidth="140dp"
     android:minHeight="60dp"
-    android:previewImage="@android:drawable/alert_dark_frame"
+    android:previewImage="@drawable/preview_task_list_widget"
     android:previewLayout="@layout/widget_task_list_preview"
     android:resizeMode="horizontal|vertical"
     android:targetCellWidth="2"
