--- a/features/glance/src/main/res/layout/widget_loading.xml
+++ b/features/glance/src/main/res/layout/widget_loading.xml
@@ -1,10 +1,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/rounded_corners">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/glance_list_loading" />
+        android:text="@string/glance_list_loading"
+        android:textColor="@color/glance_on_background_color" />
 </FrameLayout>
