--- a/features/glance/src/main/res/layout/widget_task_list_preview.xml
+++ b/features/glance/src/main/res/layout/widget_task_list_preview.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_light"
+    android:background="@drawable/rounded_corners"
     android:orientation="vertical"
     android:padding="8dp">
 
@@ -18,7 +18,7 @@
         android:gravity="center_vertical"
         android:maxLines="1"
         android:text="@string/glance_list_preview_item_1"
-        android:textColor="#FF444444"
+        android:textColor="@color/glance_on_background_color"
         android:textSize="12sp" />
 
     <CheckBox
@@ -28,7 +28,7 @@
         android:gravity="center_vertical"
         android:maxLines="1"
         android:text="@string/glance_list_preview_item_2"
-        android:textColor="#FF444444"
+        android:textColor="@color/glance_on_background_color"
         android:textSize="12sp" />
 
     <CheckBox
@@ -38,7 +38,7 @@
         android:gravity="center_vertical"
         android:maxLines="1"
         android:text="@string/glance_list_preview_item_3"
-        android:textColor="#FF444444"
+        android:textColor="@color/glance_on_background_color"
         android:textSize="12sp" />
 
 </LinearLayout>
