--- a/features/glance/src/main/res/layout/widget_task_list_preview.xml
+++ b/features/glance/src/main/res/layout/widget_task_list_preview.xml
@@ -1,15 +1,36 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/rounded_corners"
     android:orientation="vertical"
     android:padding="8dp">
 
-    <ImageView
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginBottom="12dp"
-        android:src="@drawable/ic_alkaa_icon" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        tools:ignore="UseCompoundDrawables">
+
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:contentDescription="@string/glance_preview_app_icon_content_description"
+
+            android:src="@drawable/ic_alkaa_icon" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/glance_heading"
+            android:textColor="@color/glance_on_background_color"
+            android:textSize="16sp"
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp"/>
+
+    </LinearLayout>
 
     <CheckBox
         android:layout_width="match_parent"
